# Ansible101

./: .gitignore  404.html  DEVELOPMENT.md  LICENSE  README.md  index.html  test.py
admonitions_list/: index.html
basics/: index.html
cliapp/: README.md  build_requirements.txt  pyproject.toml
cliapp/lab/: main.py
cliapp/lab/application/use_cases/: lab_initializer.py
cliapp/lab/application/use_cases/exercise/: __init__.py  exercise_a.py  exercise_c.py  exercise_databases.py  exercise_final.py  exercise_role.py  exercise_vars.py  exercise_webservers.py  template.py
cliapp/lab/application/use_cases/exercise/solutions/: vars.yml
cliapp/lab/application/use_cases/grader/: __init__.py  grader_a.py  grader_c.py  grader_databases.py  grader_role.py  grader_vars.py  grader_webservers.py
cliapp/lab/core/: registry.py
cliapp/lab/core/dtos/: EventInfo.py
cliapp/lab/core/entities/: exercise.py  grader.py  lab.py
cliapp/lab/core/interfaces/: container_port.py  container_provider.py  exercise_port.py  grader_port.py  lab_port.py  lab_provider.py  lab_repository.py  progress_notifier_port.py  registry_port.py
cliapp/lab/exercise/: __init__.py  exercise.py  exercise_a.py  exercise_b.py  exercise_c.py
cliapp/lab/grade/: __init__.py  grade.py  grade_functions.py
cliapp/lab/grade/scripts/: grade_error.py  grade_ok.py  grade_rich.py
cliapp/lab/grader/: __init__.py
cliapp/lab/infrastructure/adapters/: container_adapter.py  lab_adapter.py  lab_repository_adapter.py  registry_adapter.py
cliapp/lab/infrastructure/containerfiles/: docker-ssh-ol8.Containerfile  docker-ssh-ol8.Containerfile.old  id_ansible  id_ansible.pub  podman-ssh-ol8.Containerfile
cliapp/lab/infrastructure/exercise/: e_a.py  exercise_a.py  exercise_b.py  exercise_c.py
cliapp/lab/infrastructure/grader/: g_a.py  grader_a.py  grader_b.py  grader_c.py  utils.py
cliapp/lab/infrastructure/services/: container_service.py  lab_service.py
cliapp/lab/infrastructure/ui/: console_utils.py  progress_notifier_adapter.py
config_databases/: index.html
config_webservers/: index.html
final_project/: index.html
introduction/: index.html
lab/: setup.py
search/: search_index.json
task_roles_handlers/: index.html
templates/: index.html
vars/: index.html
webapp/: README.md  mkdocs.yml  terminal.html
webapp/backend/: app.py
webapp/docs/: admonitions_list.md  basics.md  config_databases.md  config_webservers.md  final_project.md  index.md  introduction.md  task_roles_handlers.md  templates.md  vars.md  wsl.md
webapp/frontend/: package-lock.json  package.json  terminal.html
wsl/: index.html
