[project]
name = "lab"
version = "1.0.0"
description = "CLI para la gestión de ejercicios de laboratorio de un curso Ansible."
authors = [
  { name = "Tu Nombre", email = "tu.email@example.com" }
]
requires-python = ">=3.8" # Establece la versión mínima de Python. Importante.
dependencies = [         # Corresponde a 'install_requires='
    "Typer",
    # "typing_extensions",
    # "click-completion", # Descomenta si lo usas realmente
]

[project.scripts]
# Corresponde a 'entry_points' -> 'console_scripts'
# 'lab' es el nombre del comando que se creará y que el usuario ejecutará.
# 'packages.lab:cli' es la ruta al módulo (packages/lab.py) y la función (cli)
# que se debe llamar cuando se ejecute 'lab'.
lab = "lab.main:app"

[build-system]
# Esto le dice a las herramientas de construcción de Python (como pip)
# cómo construir tu proyecto. Setuptools es el backend de construcción.
requires = ["setuptools>=61.0", "wheel", "nuitka", "toml"]
# build-backend = "setuptools.build_meta"
build-backend = "nuitka.distutils.Build"

# Data files are to be handled by setuptools and not Nuitka
# [tool.setuptools.package-data]
# some_package = ['data_file.txt']

[tool.nuitka]
standalone = true
onefile = true
show-scons = true

# options with several values, e.g. avoid including modules, accepts
# list argument.
# nofollow-import-to = ["*.tests", "*.distutils"]