[project]
# Información general del proyecto
name = "lab"  # Nombre del proyecto. Usado para empaquetado e instalación.
version = "1.0.0"  # Versión actual del proyecto.
description = "CLI para la gestión de ejercicios de laboratorio de un curso Ansible."  # Descripción corta.
authors = [
  { name = "Rafael Marín", email = "tu.email@example.com" }
]
# Versión mínima de Python requerida.
requires-python = ">=3.8"

# Dependencias del proyecto (equivalente a install_requires en setuptools)
dependencies = [
  "typer=0.17.4",
  "typing_extensions==4.15.0",
  "rich==14.1.0",
]

[project.scripts]
# Define los scripts de consola que se instalan con el paquete.
# 'lab' será el comando que el usuario ejecuta en la terminal.
# 'lab.main:app' indica el módulo (lab/main.py) y la función Typer (app) que se llama.
lab = "lab.main:app"

[build-system]
# Información necesaria para construir el paquete.
requires = [               # Herramientas necesarias para construirlo
  "setuptools==61.0",      # Backend clásico de empaquetado Python
  "wheel",                 # Para generar archivos .whl
  "nuitka==2.7.14",        # Compilador para convertir Python en binario
  "toml",                  # Parser para pyproject.toml
]
# build-backend indica qué herramienta se usa para construir
build-backend = "nuitka.distutils.Build"

# Opcional: secciones de datos adicionales para setuptools
# [tool.setuptools.package-data]
# some_package = ['data_file.txt']

[tool.nuitka]
standalone = true     # Genera un binario independiente con todas las dependencias
onefile = true        # Produce un solo archivo ejecutable
show-scons = true     # Muestra el output de SCons durante la compilación

# Otras opciones avanzadas (comentadas) para excluir ciertos módulos o tests
# nofollow-import-to = ["*.tests", "*.distutils"]
