[project]
# Información general del proyecto
name = "lab"  # Nombre del proyecto. Usado para empaquetado e instalación.
version = "0.6.3"  # Versión actual del proyecto.
description = "CLI para la gestión de ejercicios de laboratorio de un curso Ansible."  # Descripción corta.
authors = [
  { name = "Rafael Marín", email = "tu.email@example.com" }
]
# Versión mínima de Python requerida.
requires-python = ">=3.10"

# Dependencias del proyecto (equivalente a install_requires en setuptools)
dependencies = [
  "typer==0.17.4",
  "typing_extensions==4.15.0",
  "rich==14.1.0",
  "podman==5.6.0",
  "paramiko==4.0.0",
]
# "docker==7.1.0",

[project.scripts]
# Define los scripts de consola que se instalan con el paquete.
# 'lab' será el comando que el usuario ejecuta en la terminal.
# 'lab.main:app' indica el módulo (lab/main.py) y la función Typer (app) que se llama.
lab = "lab.main:app"

[build-system]
# Información necesaria para construir el paquete.
requires = [               # Herramientas necesarias para construirlo
  "setuptools==80.1.0",      # Backend clásico de empaquetado Python
  "wheel",                 # Para generar archivos .whl
  "toml",                  # Parser para pyproject.toml
]
# build-backend indica qué herramienta se usa para construir
build-backend = "setuptools.build_meta"

# Opcional: secciones de datos adicionales para setuptools
[tool.setuptools.package-data]
lab = [
  'lab/application/use_cases/exercise/*.py',
  'lab/application/use_cases/grader/*.py',
  'lab/infrastructure/containerfiles/*',
]

# Otras opciones avanzadas (comentadas) para excluir ciertos módulos o tests
# nofollow-import-to = ["*.tests", "*.distutils"]
